--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+div {
+  box-sizing: border-box;
+}
